--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     font-family: "Roboto", sans-serif
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 .purple {
     color:#7342d6;
 }
@@ -24,6 +29,10 @@ button {
 
 button:active {
     transform: translateY(1px);
+}
+
+p {
+    line-height: 1.5;
 }
 
 
@@ -108,11 +117,13 @@ h1 {
     font-size: 56px;
     color: #7342d6;
     margin-bottom: 24px;
+    text-align: center;
 }
 
 h2 {
     font-size: 32px;
     margin-bottom: 32px;
+    text-align: center;
 }
 
 .btn {
@@ -126,4 +137,157 @@ h2 {
 
 .header__img--wrapper {
     padding: 20px;
+    z-index: 2;
 }
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.container {
+    padding: 56px 0;
+}
+
+/* HIGHLIGHTS */
+
+.highlight--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+ .highlight {
+    width: calc(100% / 3);
+    padding: 0 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ }
+
+ .highlight__para {
+    text-align: center;
+    max-width: 280px;
+ }
+
+ .highlight__img {
+    border: 2px solid #7342d65d;
+    color: #7342d6;
+    width: 100px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border-radius: 4px;
+    font-size: 32px;
+    margin: 24px;
+ }
+
+ .highlight__subtitle {
+    font-size: 20px;
+    margin-bottom: 16px;
+ }
+
+ #highlights {
+    position: relative;
+    max-width: 100vw;
+ }
+
+ #highlights:before {
+    background: url('assets/wave.svg');
+    content: "";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+    top: 1px;
+    left: 0px;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-100%);
+ }
+
+ #highlights:after {
+    background: url('assets/wave.svg');
+    content: "";
+    position: absolute;
+    width: 101vw;
+    height: 12vw;
+    bottom: 1px;
+    left: 0px;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(100%) rotate(180deg);
+ }
+
+ /* FEATURES */
+ #features {
+    background-color: rgba(115, 66, 214, 0.1);
+    padding-top: 8vw;
+ }
+
+ .book__img {
+    max-height: 380px;
+    transition: all 300ms ease;
+ }
+
+ .books {
+    display: flex;
+    flex-wrap: wrap;
+ }
+
+ .book {
+    width: 25%;
+    padding: 24px;
+ }
+
+ .book__img--wrapper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+    cursor: not-allowed;
+ }
+
+ .book:hover .book__img {
+    opacity: 0.7;
+    transform: scale(1.03);
+    
+ }
+
+ .book__title {
+    margin-bottom: 8px;
+    font-size: 20px;
+ }
+
+ .book__title:hover {
+    text-decoration: underline;
+    cursor: not-allowed;
+ }
+
+ .book__rating {
+    color: #fabf2a;
+    margin-bottom: 8px;
+ }
+
+ .book__price--normal {
+    text-decoration: line-through;
+    color: #bfbfbf
+
+ }
+
+ /* EXPLORE */
+ #explore {
+    background-color: rgba(115, 66, 214, 0.1);
+ }
+
+ .explore__description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+ }
+ 
