--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: "Roboto", sans-serif
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     max-width: 100vw;
     overflow-x: hidden;
@@ -34,6 +38,81 @@ button:active {
 p {
     line-height: 1.5;
 }
+
+.no-cursor {
+    cursor: not-allowed;
+}
+
+.row__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ a:hover {
+    text-decoration: underline;
+ }
+
+ .btn__menu {
+    background-color: transparent;
+    border: none;
+    font-size: 40px;
+    text-align: center;
+    color: #7342d6;
+    display: none;
+ }
+
+ .menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 300ms ease;
+ }
+
+ .menu--open .menu__backdrop{
+    visibility: visible;
+    opacity: 1;
+ }
+
+ .menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
+ }
+
+ .btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top:10px;
+    padding: 8px;
+    color: white;
+ }
+
+ .menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+ }
+
+ .menu__list {
+    padding: 32px 0;
+
+ }
+
+ .menu__link {
+    color: white;
+    font-size: 40px;
+    text-decoration: none;
+ }
 
 
 /* NAV BAR */
@@ -156,6 +235,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
  .highlight {
@@ -164,7 +244,6 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
  }
 
  .highlight__para {
@@ -188,6 +267,7 @@ h2 {
  .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+    text-align: center;
  }
 
  #highlights {
@@ -290,4 +370,80 @@ h2 {
     flex-direction: column;
     align-items: center;
  }
+
+ /* FOOTER */
+
+ #footer {
+    background-color: #242424;
+ }
+
  
+ .footer__link--list {
+    display: flex;
+    max-width: 500px;
+    width: 100%;
+    justify-content: space-around;
+    margin: 20px 0 24px 0;
+ }
+
+ .footer__link {
+    color: white;
+    text-decoration: none;
+    padding: 0 8px;
+ }
+
+ .footer__copyright {
+    color: white;
+ }
+
+ .footer__logo--img {
+    width: 160px;
+    filter: grayscale(1) invert(1);
+
+ }
+
+ .footer__logo {
+    display: flex;
+ }
+
+ @media(max-width:768px){
+    .header__description {
+        padding: 0 24px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 26px;
+    }
+
+    button {
+        font-size: 18px;
+    }
+
+    .book {
+        width: 50%;
+    }
+
+ }
+
+ @media(max-width:576px){
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
+
+    .highlight {
+        width: 100%;
+    }
+
+    .highlight:not(:last-child) {
+        margin-bottom: 24px;
+    }
+
+ }
